[cli] added packaging execution to create a java8 standalone executable (sccJava8.bat) and an additional one working with Java9+ (scc.bat) for sake of preventing the warnings reported in #3